fixes invisible elements from being clickable

--- a/src/components/Controls/_.module.css
+++ b/src/components/Controls/_.module.css
@@ -36,7 +36,16 @@
 .card.active {
   opacity: 1;
   translate: 0;
-  user-select: auto;
+}
+
+.card.inactive::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 .card {
   position: absolute;
@@ -44,7 +53,6 @@
   right: 0;
   opacity: 0;
   translate: -100%;
-  user-select: none;
   transition: all var(--transition-duration) var(--animation-easing);
   /* display: flex; */
   background-color: blueviolet;
